[package]
name = "simple-message-box"
version = "0.0.1"
license = "MIT"
repository = "https://github.com/rukai/simple-message-box"
description = "Simple message box"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = { version = "2" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
