[package]
name = "simple-message-box"
version = "0.0.2"
authors = ["Rukai <rubickent@gmail.com>"]
license = "MIT"
repository = "https://github.com/rukai/simple-message-box"
description = "Create a simple message box"
keywords = ["window", "simple", "message", "box"]
categories = ["gui"]

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = { version = "2" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
